--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,16 +1,22 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Their Name</title>
+    <p>
+    <title>Cinnamon</title>
+    </p>
 </head>
 <body>
-    This is where your partner's info will go. 
-    <!-- Name -->
-    <!-- Pronunciation -->
-    <!-- City -->
-    <!-- Previous Industries -->
-    <!-- What are they looking forward to in -->    
+  <h2> Cinnamon's info </h2>
+  <ol>
+  <li>Cinnamon</li>
+  <li>Cyn na mon</li>
+  <li>Atlanta</li>
+  <li>Education & Tech</li>
+  <li>Hoping to both enhance and share her knowledge in technology </li>
+</ol>  
 </body>
 </html>
+
